# vedes4

./: README
City/app/: proguard-rules.pro
City/app/src/main/: AndroidManifest.xml
City/app/src/main/java/hook/city/: MapsActivity.java
City/app/src/main/res/layout/: activity_maps.xml
City/app/src/release/res/values/: google_maps_api.xml
City_regi/app/: build.gradle
City_regi/app/src/androidTest/java/hook/city/: ApplicationTest.java
City_regi/app/src/debug/res/values/: google_maps_api.xml
City_regi/app/src/main/assets/: bus_way_coords.txt
City_regi/app/src/main/java/hook/city/: MapsActivity.java
City_regi/app/src/main/res/: coords
City_regi/app/src/main/res/values/: strings.xml
bus-stops/: Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.status  configure  configure.ac
bus-stops/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
bus-stops/src/: Makefile  Makefile.am  Makefile.in  bstops  bus-stops.cpp  bus_way_coords.txt  vajonjo.txt
bus-stops/src/.deps/: bstops-bus-stops.Po
jxmap_osm/: README  pom.xml
jxmap_osm/src/main/java/: Jxmap_osm.java  RoutePainter.java  SelectionAdapter.java  SelectionPainter.java
